debug: Add run button

--- a/debugtool/src/gui/main_window.ui
+++ b/debugtool/src/gui/main_window.ui
@@ -19,10 +19,10 @@
           <object class="GtkBox">
             <child>
               <object class="GtkBox">
+                <property name="hexpand">True</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkCheckButton" id="cb_speedo">
-                    <property name="active">True</property>
                     <property name="label">speedo</property>
                   </object>
                 </child>
@@ -33,7 +33,6 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="cb_setpoint">
-                    <property name="active">True</property>
                     <property name="label">setpoint</property>
                   </object>
                 </child>
@@ -49,13 +48,22 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="cb_temp_mot">
-                    <property name="active">True</property>
                     <property name="label">temp motor</property>
                   </object>
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="cb_temp_uc">
                     <property name="label">temp uc</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkCheckButton" id="cb_run">
+                    <property name="label">run</property>
                   </object>
                 </child>
               </object>
